# DeepLearningManifolds

./: .gitignore  CreateKernel.m  RFusage.m  ScatSphericalMomonets.m  add_paths.m  apply_filter.m  example.m  example_classification.m  example_classification_rotate.m  example_reconstruction.m  example_rotation.m  filters.mat  haar_read_mnist_sphere.m  haar_readidx.m  haar_rotate.m  margined_mnist5.mat  plot_filters.m  plot_projection_on_sphere.m  plot_sph.m  project_on_sphere.m  scat.m  scat2.m  sh_image.m  show_results.m  sphere_to_grid.m
MNIST/: Untitled.m
SphericalUtils/: PrepareMnistSphere.m  RandRot.m  RotateSphrImg.m  project_on_sphere_MNIST.m
SphericalUtils/Rotation/: compose_rotation.m  decompose_rotation.m  rotation_matrix_demo.m
cpp/: CMakeLists.txt
cpp/python/: CMakeLists.txt  dlm.i
cpp/src/ssht/: method.h  transform.h
cpp/test/: CMakeLists.txt  ssht_reconstruction.c  ssht_reconstruction.cc
haarscat-0.1lg/: DemoSphere.m  MnistSpherToTensor.m  PrepareMnistSphere.m  README  read_mnist_sphere_uniform.m
haarscat-0.1lg/classification/: ._libsvmtrain.mexmaci64  libsvmpredict.mexa64  libsvmpredict.mexmaci64  libsvmtrain.mexa64  libsvmtrain.mexmaci64  svm_rbf.m
haarscat-0.1lg/core/: haar_conv_1d.m  haar_scat.m  haar_scat_2d_image_grid_multishift.m  haar_tree_2d_image_grid.m  haar_tree_learn.m
haarscat-0.1lg/demo/: HaarFeaturesScat.m  demo_cifar10_2d_image_grid.m  demo_cifar10_learn.m  demo_mnist_2d_image_grid.m  demo_mnist_learn.m  demo_mnist_sphere_learn.m
haarscat-0.1lg/feat_select/: ols.m  pls_multiclass.m
haarscat-0.1lg/max_wmatch_matlab/: ._max_wmatch.mexmaci64  W.mat  glib.c  graphtypes.h  input.form  make_wmatch.m  makefile  match.defs  match_c.shell  max_wmatch.c  max_wmatch.mexa64  max_wmatch.mexmaci64  max_wmatch.mexw64  output.form  pairs.c  pointer.c  readgraph.c  readme  term.c  test.in  test.out  unpairs.c  wmatch.c
haarscat-0.1lg/utils/: ProjectImageToSphere.m  preproc.m  read_cifar10.m  read_mnist.m  read_mnist_sphere.m  readidx.m  reorder_feat.m  rotate_crop.m  scan_coord.m  scan_coord_sqr.m
libsvm-compact-0.1/: Makefile  Makefile.win  README.compact  README.dense  svm-predict.c  svm-scale.c  svm-train.c  svm.cpp  svm.def  svm.h
libsvm-compact-0.1/matlab/: Makefile  README  libsvmread.mexw64  libsvmwrite.c  libsvmwrite.mexw64  make.m  make_dense.m  make_float.m  make_old.m  svm_model_matlab.c  svmpredict.c  svmpredict.mexw64  svmpredict_inplace.c  svmtrain.c  svmtrain.mexw64  svmtrain_inplace.c
matlab/: add_paths.m  apply_filter.m  band_energy.m  example_classification.m  example_nsht.m  scat2.m  show_results.m
polarch-Spherical-Harmonic-Transform-8360a11/: Fdirs2grid.m  LICENSE  README.md  TEST_SCRIPTS_SHT.m  checkCondNumberSHT.m  complex2realCoeffs.m  complex2realSHMtx.m  conjCoeffs.m  directSHT.m  euler2rotationMatrix.m  gaunt_mtx.m  gaunt_mtx_fast.m  getFliegeNodes.m  getSH.m  getSHrotMtx.m  getTdesign.m  getVoronoiWeights.m  grid2dirs.m  inverseSHT.m  leastSquaresSHT.m  legendre2.m  plotSphFunctionCoeffs.m  plotSphFunctionGrid.m  plotSphFunctionTriangle.m  real2complexCoeffs.m  real2complexSHMtx.m  replicatePerOrder.m  rotateAxisCoeffs.m  sphConvolution.m  sphDelaunay.m  sphMultiplication.m  sphVoronoi.m  sphVoronoiAreas.m  sym_w3j.m  unitCart2sph.m  unitSph2cart.m  w3j.m  w3j_stirling.m  wignerD.m
scatnet/: LICENSE-2.0.txt  README.md  addpath_scatnet.m
(+355 files in other folders)
